<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        android:layout_weight="100"
        android:orientation="vertical">

        <TextView
            android:id="@+id/catPharmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/description_font"
            android:text="@string/restaurant_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/catParmDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="@string/description"
            android:textSize="@dimen/small_size" />

        <TextView
            android:id="@+id/catParmPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/title_font"
            android:text="@string/item_price"
            android:textColor="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/multi_sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sub_title_font"
            android:text="@string/multi_sizes"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/extra_small_size"
            android:visibility="gone" />
    </LinearLayout>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/CatPharmIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical"
        fresco:actualImageScaleType="centerInside"
        fresco:placeholderImage="@drawable/upload_image_placeholder"
        fresco:placeholderImageScaleType="centerInside" />

</LinearLayout>