<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".seller.activities.SellerRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/varela_round"
            android:text="@string/choose_your_logo" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/upload_image_placeholder" />

        <ProgressBar
            android:id="@+id/logoProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/restaurant_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/restName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_title"
                android:fontFamily="@font/varela_round"
                android:textSize="@dimen/small_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/restUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_username"
                android:fontFamily="@font/varela_round"
                android:textSize="@dimen/small_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/restPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_lock"
                android:fontFamily="@font/varela_round"
                android:inputType="textPassword"
                android:textSize="@dimen/small_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/restConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_lock"
                android:fontFamily="@font/varela_round"
                android:inputType="textPassword"
                android:textSize="@dimen/small_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/restDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_description"
                android:fontFamily="@font/varela_round"
                android:textSize="@dimen/small_size" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/splash_btn_bg"
            android:fontFamily="@font/varela_round"
            android:text="@string/register"
            android:textSize="@dimen/small_size" />

    </LinearLayout>
</ScrollView>