<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/sub_title_font"
            android:text="@string/please_enter_the_verification_code" />

        <TextView
            android:id="@+id/enteredPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/title_font" />

        <EditText
            android:id="@+id/code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sub_title_font"
            android:inputType="number"
            android:maxLength="6"
            android:textAlignment="center"
            android:textSize="@dimen/small_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/closeBtn"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_margin="4dp"
                android:background="@drawable/splash_btn_bg"
                android:fontFamily="@font/sub_title_font"
                android:text="@string/close"
                android:textSize="@dimen/extra_small_size" />

            <Button
                android:id="@+id/verifyBtn"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_margin="4dp"
                android:layout_weight="100"
                android:background="@drawable/splash_btn_bg"
                android:enabled="false"
                android:fontFamily="@font/sub_title_font"
                android:text="@string/verify"
                android:textColor="@color/darkGreen"
                android:textSize="@dimen/extra_small_size" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>