<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buyer.activities.UserLoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/user_login_bg" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3e000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/sub_title_font"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/large_size" />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:background="@drawable/curve_light">


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_phone_iphone_light"
                android:fontFamily="@font/sub_title_font"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="@dimen/small_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:background="@android:color/background_light" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/splash_btn_bg"
                android:fontFamily="@font/sub_title_font"
                android:text="@string/continue_with_facebook"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/extra_small_size" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
