<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.activities.SellerLoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/rest_login_bg" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3e000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/sub_title_font"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/large_size" />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="bottom"
        android:background="@drawable/curve_dark">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp">

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:layout_marginStart="42dp"
                android:background="@android:color/background_light" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="35dp"
                    android:drawableStart="@drawable/ic_username_light"
                    android:fontFamily="@font/sub_title_font"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textSize="@dimen/small_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#fff" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="35dp"
                    android:drawableStart="@drawable/ic_lock_light"
                    android:fontFamily="@font/sub_title_font"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textSize="@dimen/small_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#fff" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp">
                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="34dp"
                        android:background="@drawable/splash_btn_bg"
                        android:fontFamily="@font/sub_title_font"
                        android:text="@string/login"
                        android:textColor="@android:color/background_light" />
                    <ProgressBar
                        android:id="@+id/loginProgress"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:visibility="gone"/>

                </FrameLayout>


                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/splash_btn_bg"
                    android:fontFamily="@font/sub_title_font"
                    android:text="@string/register"
                    android:textColor="@android:color/holo_orange_light" />

            </LinearLayout>
        </FrameLayout>

    </FrameLayout>

</FrameLayout>